@startuml DiagramaDeClasses
skinparam classAttributeIconSize 0
caption Diagrama de Classes com Relacionamentos

package br.univille.projfabsoft.entity {
    class Usuario {
        - Long id
        - String nome
        - String email
        - String historicoProfissional
        - String qualificacoes
        - String areasDeInteresse

        + getId(): Long
        + setId(id: Long): void
        + getNome(): String
        + setNome(nome: String): void
        + getEmail(): String
        + setEmail(email: String): void
        + getHistoricoProfissional(): String
        + setHistoricoProfissional(historicoProfissional: String): void
        + getQualificacoes(): String
        + setQualificacoes(qualificacoes: String): void
        + getAreasDeInteresse(): String
        + setAreasDeInteresse(areasDeInteresse: String): void
    }

    class Recrutador {
        - Long id
        - String nomeEmpresa

        + getId(): Long
        + setId(id: Long): void
        + getNomeEmpresa(): String
        + setNomeEmpresa(nomeEmpresa: String): void
    }

    class ProdutorDeConteudo {
        - Long id
        - String nome

        + getId(): Long
        + setId(id: Long): void
        + getNome(): String
        + setNome(nome: String): void
    }

    class Curso {
        - Long id
        - String titulo
        - String descricao
        - String conteudo

        + getId(): Long
        + setId(id: Long): void
        + getTitulo(): String
        + setTitulo(titulo: String): void
        + getDescricao(): String
        + setDescricao(descricao: String): void
        + getConteudo(): String
        + setConteudo(conteudo: String): void
    }

    class PlanoDeAssinatura {
        - Long id
        - String nomePlano
        - String beneficios
        - Double preco

        + getId(): Long
        + setId(id: Long): void
        + getNomePlano(): String
        + setNomePlano(nomePlano: String): void
        + getBeneficios(): String
        + setBeneficios(beneficios: String): void
        + getPreco(): Double
        + setPreco(preco: Double): void
    }

    class Projeto {
        - Long id
        - String titulo
        - String descricao
        - String link

        + getId(): Long
        + setId(id: Long): void
        + getTitulo(): String
        + setTitulo(titulo: String): void
        + getDescricao(): String
        + setDescricao(descricao: String): void
        + getLink(): String
        + setLink(link: String): void
    }

    class TesteDeHabilidade {
        - Long id
        - String titulo
        - String descricao
        - Integer pontuacao

        + getId(): Long
        + setId(id: Long): void
        + getTitulo(): String
        + setTitulo(titulo: String): void
        + getDescricao(): String
        + setDescricao(descricao: String): void
        + getPontuacao(): Integer
        + setPontuacao(pontuacao: Integer): void
    }

    Usuario "1" -- "0..*" Projeto : cria
    Usuario "1" -- "0..*" TesteDeHabilidade : realiza
    Usuario "1" -- "0..*" Curso : participa
    Recrutador "1" -- "0..*" Usuario : recruta
    ProdutorDeConteudo "1" -- "0..*" Curso : cria
    Usuario "1" -- "1" PlanoDeAssinatura : possui
}
@enduml